# dotext

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
data/: sample.docx
examples/: readdocx.rs
samples/: filosofi-logo.docx  sample.ods
src/: doc.rs  docx.rs  lib.rs  msdoc.rs  odp.rs  ods.rs  odt.rs  pptx.rs  xlsx.rs
